infra/k8s-staging/ingress.svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: trustfund
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: trustfund.edugate.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /api/v2/?(.*)
            backend:
              service:
                name: backend-srv
                port:
                  number: 3001
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: web-admin-srv
                port:
                  number: 80
